Fix web font flickering during download
Fixes #95.

--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -3,6 +3,7 @@
     font-family: 'Muli';
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
     src: local('Muli'), local('Mulish'), url('Muli-Regular.woff') format('woff');
 }
 
@@ -10,6 +11,7 @@
     font-family: 'Muli';
     font-style: normal;
     font-weight: 600;
+    font-display: swap;
     src: local('Muli'), local('Mulish'), url('Muli-SemiBold.woff') format('woff');
 }
 
@@ -17,6 +19,7 @@
     font-family: 'Muli';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: local('Muli'), local('Mulish'), url('Muli-Bold.woff') format('woff');
 }
 
@@ -25,6 +28,7 @@
     font-family: 'Fira Mono';
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
     src: local('Fira Mono'), url('FiraMono-Regular.woff') format('woff');
 }
 
@@ -32,5 +36,6 @@
     font-family: 'Fira Mono';
     font-style: normal;
     font-weight: 500;
+    font-display: swap;
     src: local('Fira Mono'), url('FiraMono-Medium.woff') format('woff');
 }
